Fix to checkboxes on mobile

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -525,9 +525,9 @@ input[type="checkbox"]:checked+label {
 
 
 .form-field-checkbox {
-    display: flex;
+    display: inline-block;
     align-items: center;
-    margin: 10px;
+    /* margin: 10px; */
     margin-bottom: 0px;
     margin-top: 0px;
     color: white;
